ihb crud 구현, 고정핀, 수정됨 추가